--- a/JrossOnlineResume/index.html
+++ b/JrossOnlineResume/index.html
@@ -71,7 +71,7 @@
                 <h3  style="padding-bottom: 0px;"><font color = "white"><br>&nbsp; Jack Ross</font></h3>
                 <p0><font color = "lightgray">&nbsp; Statistics Major B.S. <br><br><br><br>West Chester University</font></p0>
                 <BR><BR><BR><BR><BR>
-                <p0><a href="" style="text-decoration: none;"><font color = "gold">&nbsp;|One-page CV|</font>
+                <p0><a href="" style="text-decoration: none;"><font color = "gold">&nbsp;</font>
                 </a></center></p0> 
                 <BR><BR><BR>
                 <hr color = "gray">
@@ -92,10 +92,12 @@
                     <!--hr color="gray">
                     <p0><font color = "lightgray"-->
                     &nbsp; <img src="Image/GitHub.jpg" width=10 height=10>&nbsp;  
-                    &nbsp; <a href="https://github.com/pengdsci" style="text-decoration: none;"  target="_blank"  
-                     onclick="window.open('https://github.com/pengdsci','name','width=700, height=500')">
-                     <font color = "lightgray">https://github.com/pengdsci</font></a><br><br>
-                    &nbsp; <img src="Image/LinkedInLogo.jpg" width=10 height=10><a href=""></a><br><br>   
+                    &nbsp; <a href="https://github.com/JackRoss10089/JackRoss" style="text-decoration: none;"  target="_blank"  
+                    onclick="window.open('https://github.com/JackRoss10089/JackRoss','name','width=700, height=500')">
+                     <font color = "lightgray">https://github.com/JackRoss10089/JackRoss</font></a><br><br>
+                    &nbsp; <img src="Image/LinkedInLogo.jpg" width=10 height=10><a href="www.linkedin.com/in/jackross-stat" style="text-decoration: none;" target="_blank"  
+                    onclick="window.open('https://www.linkedin.com/in/jackross-stat','name','width=700, height=500')">
+                     <font color = "lightgray">www.linkedin.com/in/jackross-stat</font></a><br><br>   
                     &nbsp; <img src="img/X.jpg" width=10 height=10><a href=""></a><br><br>
                     &nbsp; <img src="img/F.jpg" width=12 height=12><a href=""></a>  
                     </font></p0>
@@ -133,7 +135,7 @@
            <TD style = "line-height: 110%;">
               <h4 style="padding-bottom: 0px; margin: 0;"><font color = "#123456">Education</font></h4>
                <font color = 'black' face="WildWest" size="4">
-                  <p> List schools attended and degrees earned....</p>
+                  <p> West Chester University, B.S. Statistics</p>
                   <br><br>
                </font>
                <hr color="lightblue">
@@ -144,7 +146,9 @@
            <TD style = "line-height: 110%;">
               <h4 style="padding-bottom: 0px; margin: 0;"><font color = "#123456">Experience</font></h4>
                <font color = 'black' face="WildWest" size="4">
-                  <p> write your professional experience here.....</p>
+                  <p> Eight Years Experience Kitchen Manager Tamaqua Station Restaurant</p>
+                   <p> Former Analyst, Sector Head, and Executive Board Member of West Chester University Investment Group</p>
+                   <p> Completed statistical modeling courses for OLS regression, Logistic Regrerssion, and other modeling techniques</p>
                   <br><br>
                </font>
                <hr color="lightblue">
@@ -155,7 +159,14 @@
            <TD style = "line-height: 110%;">
               <h4 style="padding-bottom: 0px; margin: 0;"><font color = "#123456">Course Work</font></h4>
                <font color = 'black' face="WildWest" size="4">
-                  <p> provide a list of modeling courses you took with brief descriptions</p>
+                  <p> STA 321 </p>
+                   <li> OLS Modeling </li>
+                       <li> Time Series Modeling </li>
+                            <li> Logestic Regression </li>
+                   <p> STA 419 </p>
+                   <li> K-nearest Neigbors </li>
+                      <li>  Decision Trees </li>
+                       <li> Principal Component Analysis</li>
                   <br><br>
                </font>
                <hr color="lightblue">
@@ -166,25 +177,17 @@
            <TD style = "line-height: 110%;">
               <h4 style="padding-bottom: 0px; margin: 0;"><font color = "#123456">Projects/Presenations</font></h4>
                <!--font color = "blue" size="4"-->
-                  <p> Provide a list of projects/publications you completed with corresponding URLs. 
-                    Keep in mind that a short description of each project is helpful. For example</p>
+                  <p> These are some of the projects I have completed:</p>
                     <p><font color = "blue">
-                     &nbsp;&nbsp;  1. An End-to-end Project-based Approach to Teaching Data Mining Process. 
-                     <a href="https://pengdsci.github.io/eCOTS2022/"  target="_blank"  
-                     onclick="window.open('https://pengdsci.github.io/eCOTS2022/','name','width=700, height=500')">
+                     &nbsp;&nbsp;  1. Analysis of Fourth Down Attempts in the 2022-2023 NFL Season 
+                     <a href="https://github.com/JackRoss10089/JackRoss/blob/576ced881a16d0e7177f72356b798f532cbaaaa1/JrossOnlineResume/Project/STA%20202%20Final%20Project.pptx"  target="_blank"  
+                     onclick="window.open('https://github.com/JackRoss10089/JackRoss/blob/576ced881a16d0e7177f72356b798f532cbaaaa1/JrossOnlineResume/Project/STA%20202%20Final%20Project.pptx','name','width=700, height=500')">
                      <link-btn> WEB LINK</link-btn></a> <br>
-                     &nbsp;&nbsp;  2. Semiparametric Tests for Equality of Two Independent Variances. 
-                     <a href="Project/published-01.pdf"  target="_blank"  
-                     onclick="window.open('proj/published-01.pdf','name','width=700, height=500')">
-                     <link-btn> PDF Preprint</link-btn></a> <br>
-                     &nbsp;&nbsp;  3. A new formulation of generalized gamma: some results and applications. 
-                     <a href="proj/published-03.pdf"  target="_blank"  
-                     onclick="window.open('proj/published-03.pdf','name','width=700, height=500')">
-                     <link-btn> PDF Preprint</link-btn></a> <br>
-                     &nbsp;&nbsp;  4. A general framework of semiparametric polychotomous logit regression. 
-                     <a href="proj/UnderReview03 -IM.pdf"  target="_blank"  
-                     onclick="window.open('proj/UnderReview03-IM.pdf','name','width=700, height=500')">
-                     <link-btn> PDF Preprint</link-btn></a> 
+                     &nbsp;&nbsp;  2. Time Series Analysis of US Labor Market in 20th and 21st Century 
+                     <a href="https://github.com/JackRoss10089/JackRoss/blob/576ced881a16d0e7177f72356b798f532cbaaaa1/JrossOnlineResume/Project/STA321Presentation.pptx"  target="_blank"  
+                     onclick="window.open('https://github.com/JackRoss10089/JackRoss/blob/576ced881a16d0e7177f72356b798f532cbaaaa1/JrossOnlineResume/Project/STA321Presentation.pptx','name','width=700, height=500')">
+                     <link-btn> WEB LINK</link-btn></a> <br>
+                     &nbsp;&nbsp;  
                     </font></p>
                <!--/font-->
                <hr color="lightblue">
@@ -194,7 +197,7 @@
            <TD style = "line-height: 110%;">
               <h4 style="padding-bottom: 0px; margin: 0;"><font color = "#123456">Skills</font></h4>
                <font color = 'black' face="WildWest" size="4">
-                  <p> Programming languages, platforms and relevant technologies, etc..</p>
+                  <p> Skills include R Programming, SAS Programming, Qualtrics</p>
                   <br><br><br>
                </font>
                <hr color="lightblue">
